# office-tool

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  wfp.py  wfp_cli.py
docs/: official_document_rules.md  releasing.md
office_tool/: __init__.py  __main__.py
src/office_tool/: __init__.py  audit.py  cli.py  config.py  docx_utils.py  formatter.py  generator.py  gui.py  gui_entry.py  io.py  legacy_doc.py  models.py  patterns.py  profile_store.py  reports.py  secret_store.py  services.py  table_audit.py  table_merge.py  table_models.py
src/office_tool/ai/: __init__.py  deepseek.py
src/office_tool/excel/: __init__.py  tools.py
tests/: generate_final_verification_docs.py  test_ai_review.py  test_audit.py  test_config_cli.py  test_excel_tools.py  test_formatter.py  test_gui_logic.py  test_legacy_doc.py  test_profile_store.py  test_secret_store.py  test_services.py  test_table_module.py
